--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:coverage": "npm run test -- --coverage"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^0.34.6",
