Split things up a bit better

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["demo", "src"]
+  "include": ["demo", "src"],
+  "exclude": ["**/*.test.ts"]
 }
