--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CompiledCreations/tsc-game-framework.git"
+  },
   "publishConfig": {
     "@compiledcreations:registry": "https://npm.pkg.github.com"
   },
