--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@compiledcreations/tsc-game-framework",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha1",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
