--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "files": [
     "dist"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/CompiledCreations/tsc-game-framework.git"
-  },
+  "repository": "https://github.com/CompiledCreations/tsc-game-framework.git",
   "publishConfig": {
     "@compiledcreations:registry": "https://npm.pkg.github.com"
   },
