--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,8 +12,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      - name: Install dependencies
       - run: npm ci
-      - run: npm test
+      - name: Build and test package
+      - run: npm run build && npm test
 
   publish-gpr:
     needs: build
