--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,9 +12,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Install dependencies
       - run: npm ci
-      - name: Build and test package
       - run: npm run build && npm test
 
   publish-gpr:
@@ -30,6 +28,6 @@ jobs:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
-      - run: npm publish
+      - run: npm run build && npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
